--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "vite": "^7.0.7"
     },
     "dependencies": {
+        "@fontsource/inter": "^5.2.8",
         "alpinejs": "^3.15.8"
     }
 }
