--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     },
     "dependencies": {
         "@fontsource/inter": "^5.2.8",
+        "@fontsource/montserrat": "^5.2.8",
         "alpinejs": "^3.15.8"
     }
 }
